# posthog-flutter

./: INTEGRATION_GUIDE.md  check_events.sh  pubspec.yaml
example/lib/: main.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
lib/: posthog_flutter.dart
lib/src/: posthog.dart  posthog_config.dart  posthog_flutter_io.dart  posthog_flutter_platform_interface.dart  posthog_widget.dart
lib/src/autocapture/: flow_tracker.dart  posthog_autocapture_widget.dart  posthog_keys.dart
lib/src/replay/: native_communicator.dart
lib/src/util/: logging.dart  platform_io_real.dart
linux/: CMakeLists.txt  feature_flags_manager.cc  feature_flags_manager.h  http_client.cc  http_client.h  posthog_flutter_plugin.cc  posthog_flutter_plugin.h  posthog_logger.cc  posthog_logger.h  posthog_models.h  session_replay_manager.cc  session_replay_manager.h  storage_manager.cc  storage_manager.h
posthog_flutter/: posthog_flutter_plugin.h
